# granttpy

./: .gitignore  LICENSE  README.md  ex.py  gantt.py  pyproject.toml
.github/workflows/: python-package.yml
examples/: ex.py
src/grantt/: __init__.py
