[project]
name = "granttpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Maximilian Ramgraber", email = "m.ramgraber@tudelft.nl" },
    { name = "Daniel Sharp", email = "dannys4@mit.edu" }
]
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.5",
]

[project.scripts]
granttpy = "granttpy:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
